# pytket-pecos

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/pytket_pecos/: __init__.py  emulator.py
test/: test_emulator.py
